--- a/localizacao-html5/index.html
+++ b/localizacao-html5/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Localização</h1>
   <div id="location">
     Sua localização aparecerá aqui
   </div>
